Bug 387193 - "Paste as attachment" pastes text/plain like normal
Summary: "Paste as attachment" pastes text/plain like normal
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-21 21:51 UTC by Thiago Macieira
Modified: 2017-12-01 07:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2017-11-21 21:51:09 UTC
Tested on 5.6.2.

Steps to reproduce:
1) select some text from konsole
2) open an email composer (rich text editing is off)
3) Edit > Paste as attachment

Actual results:
Text pasted into the email

Expected results:
Text attached
Comment 1 Laurent Montel 2017-12-01 07:01:03 UTC
Git commit 19a171e57a9122a99cd674fecb7a966b6b2a27b9 by Montel Laurent.
Committed on 01/12/2017 at 07:00.
Pushed by mlaurent into branch 'Applications/17.12'.

Fix Bug 387193 - "Paste as attachment" pastes text/plain like normal

FIXED-IN: 5.7.0

M  +4    -1    src/editor/kmcomposerwin.cpp

https://commits.kde.org/kmail/19a171e57a9122a99cd674fecb7a966b6b2a27b9