Fix Bug 387193 - "Paste as attachment" pastes text/plain like normal

FIXED-IN: 5.7.0
BUG: 387193